<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/my_gradient_drawable_pink"
    android:orientation="vertical"
    tools:context=".GuessGameActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/counterTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/try_left"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp">

            <AutoCompleteTextView
                android:id="@+id/cardNameACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/name_of_the_card"
                android:padding="10dp"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submitBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/beautyPink"
            android:text="@string/check" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/Tabla"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:stretchColumns="1">

                    <TableRow
                        android:id="@+id/header"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/setColumn"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="10dp"
                            android:text="@string/set"
                            android:textColor="@color/black"
                            android:textSize="23sp" />

                        <TextView
                            android:id="@+id/classColumn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="10dp"
                            android:text="@string/class_st"
                            android:textColor="@color/black"
                            android:textSize="23sp" />

                        <TextView
                            android:id="@+id/rarityColumn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="10dp"
                            android:text="@string/rarity"
                            android:textColor="@color/black"
                            android:textSize="23sp" />

                        <TextView
                            android:id="@+id/manaColumn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/mana"
                            android:textColor="@color/black"
                            android:textSize="23sp" />

                        <TextView
                            android:id="@+id/attackColumn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/attack"
                            android:textColor="@color/black"
                            android:textSize="23sp" />

                        <TextView
                            android:id="@+id/healthColumn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/health"
                            android:textColor="@color/black"
                            android:textSize="23sp" />
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </HorizontalScrollView>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/bannerAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="ADMOB_BANNER_ID" />

</RelativeLayout>